fix header alignment

--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -1,6 +1,7 @@
 #root {
   max-width: 1800px;
-  margin: 0 auto;
-  padding: 2rem;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
+  height: 100vh;
 }
