--- a/ui/src/components/Header.css
+++ b/ui/src/components/Header.css
@@ -1,9 +1,9 @@
 .header {
-  position: fixed;
-  top: 0;
-  margin-left: 0;
-  padding: 1rem 1rem 0rem 1rem;
-  width: 98%;
+  margin-top: 0;
+  margin-left: auto;
+  margin-right: auto;
+  /* padding: 1rem 1rem 0rem 1rem; */
+  width: 98vw;
   max-width: 1280px;
   backdrop-filter: blur(10px);
 }
@@ -15,7 +15,7 @@
 }
 
 .header-start {
-  width: 45%;
+  width: 50%;
   padding-left: 0;
   display: flex;
   align-items: center;
@@ -81,23 +81,17 @@
   outline: none;
 }
 
-/* .hamburger-menu {
-    display: none;
-  } */
-
 @media screen and (max-width: 750px) {
   .header-nav {
     display: none;
   }
 
-  /* .hamburger-menu {
-      display: flex;
-      justify-content: flex-end;
-      width: 25%;
-    } */
-
   .header-start {
     width: 80%;
+  }
+
+  .header-icons {
+    width: 20%;
   }
 
   .header {
@@ -128,4 +122,8 @@
   #timeline-nav {
     display: block;
   }
+}
+
+hr {
+  margin-block-start: 0;
 }
